# demo-rust-axum-sqlx-jwt

./: .env.sample  .gitignore  Cargo.toml
src/: config.rs  main.rs  routes.rs
src/controller/: auth.rs  user.rs
src/dto/: auth.rs  user.rs
src/entity/: user.rs
src/repository/: user.rs
src/service/: auth.rs  user.rs
src/utils/: error.rs  jwt.rs  mod.rs
