[package]
name = "Axum"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.6.19", features = ["headers", "json", "query"] }
bcrypt = "0.15.0"
chrono = "0.4.26"
dotenv = "0.15.0"
jsonwebtoken = "8.3.0"
# hyper = "0.14.27"
# sea-orm = { version = "0.12.1", features = [ "sqlx-mysql", "runtime-tokio-rustls", "macros" ] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.104"
sqlx = { version = "0.7.1", features = ["runtime-tokio-rustls", "mysql"] }
tokio = { version = "1.29.1", features = ["full"] }
tower-http = { version = "0.4.3", features = ["cors", "trace"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
